# Agentic-AI-For-Education

./: .gitattributes  COMMANDS_CREATE_PUSH_DOCKERFILE.md  CONCURRENCY_AND_THREAD_SAFETY.md  Dockerfile  METRICS_README.md  README.md  REFACTORING_GUIDE.md  REFACTOR_SUMMARY.md  SUPABASE_WINDOWS_CONNECTION_FIX.md  TECHNICAL_ANALYSIS.md  app copy.py  app.py  app_backup.py  app_backup_with_speed_boost.py  app_graph.py  app_gt.py  app_optimized_animation.py  app_optimized_animation_kannada.py  app_pydub_3.12.py  app_simulation.py  app_simulation_optimized.py  app_with_audio.py  app_with_audio_backup.py  character_template.html  check_email_sending.ipynb  compute_session_metrics.py  create_tables.sql  debug.py  evaluator_refactor_options.md  kannadatrans.ipynb  kannadatry.ipynb  langgraph.json  list_langsmith_projects.py  main.py  packages_not_needed.txt  pkgs.json  pyproject copy.toml  pyproject.toml  quick_test.py  requirements-minimal.txt  (+34 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Creating_Section_Text/: config.py
NCERT/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  19.json  2.json  21.json  22.json  23.json  3.json  4.json  5.json  6.json  7.json  8.json  COMPLETE_JSON_STRUCTURE_MAPPING.md  Fractions.txt
Streamlit_UI/: app_agent_v5.py  app_optimized_animation.py  (+4 more)
studio_app/: langgraph.json  pyproject.toml
(+635 files in other folders)
