[project]
name = "agentic-ai-for-education"
version = "0.0.1"
description = "Educational agent with LangGraph, RAG, and Streamlit UI"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Ensure both your package and the studio app are importable
include = ["concept_map_poc","api_tracker_utils","utils","Streamlit_UI","educational_agent_v1","tester_agent","educational_agent_with_simulation","educational_agent_optimized","educational_agent_optimized_langsmith","educational_agent_optimized_langsmith_kannada","api_servers","NCERT","educational_agent_optimized_langsmith_autosuggestion"]
